=======
CHANGES
=======

3.9.2 (unreleased)
------------------

- Replaced an undeclared test dependency on zope.app.authentication with
  zope.password.

- Removed undeclared test dependency on zope.app.folder.


3.9.1 (2010-09-14)
------------------

- Removed a testing dependency on zope.app.file.

- Replaced a testing dependency on zope.app.securitypolicy with one on the base
  zope.securitypolicy distribution.


3.9.0 (2010-08-19)
------------------

- Updated ``ftesting.zcml`` to use the new permission names exported by
  ``zope.dublincore`` 3.7.


3.8.2 (2010-01-08)
------------------

- Fixed tests using a newer zope.publisher that requires zope.login.

3.8.1 (2009-12-26)
------------------

- Fixed test_directive. Some parts of zope.app.publisher were moved
  to zope.browsermenu and zope.browserpage.

- Moved tests/test_view_permissions.py to browser/tests.

- Added undeclared install dependency on ``zope.app.publisher``.

- Test no longer use deprecated ``zope.testing.doctestunit`` but
  python's ``doctest`` instead.


3.8.0 (2009-05-13)
------------------

- Moved ``IAdding`` interface to ``zope.browser.interfaces``, leaving
  BBB imports.

3.7.2 (2009-03-12)
------------------

- Show a "nothing to add" message instead of empty list in the
  adding view, if there's nothing to add.

- Don't show the "Add" menu item if there's nothing to add.

- Adapt to the removal of deprecated interfaces from
  ``zope.component.interfaces``. Now ``IAdding`` inherits from
  ``zope.publisher.interfaces.browser.IBrowserView``.

3.7.1 (2009-02-05)
-------------------

- Updated test to accomodate "Pythonic" exception now raised from
  ``__setitem__`` provided by ``zope.container`` (``KeyError`` instead
  of ``zope.exceptions.UserError``).

3.7.0 (2009-01-31)
------------------

- Remove long-time deprecated ``IContentContainer`` class.

- We now rely on a new package called ``zope.container``, which
  contains the basic implementation of ``zope.container`` and is