@@ -53,9 +53,13 @@ setup(name='zope.app.container',
                                 'zope.login',
                                 'zope.password',
                                 'zope.securitypolicy',
+                                'zope.schema',
+                                'zope.site',
                                 ]),
       install_requires=['setuptools',
                         'zope.browser',
+                        'zope.browsermenu',
+                        'zope.browserpage',
                         'zope.component',
                         'zope.container',
                         'zope.copypastemove',
@@ -68,11 +72,9 @@ setup(name='zope.app.container',
                         'zope.lifecycleevent',
                         'zope.location',
                         'zope.publisher >= 3.12',
-                        'zope.schema',
                         'zope.security',
                         'zope.size',
                         'zope.traversing',
-                        'zope.app.publisher',
                         ],
       include_package_data = True,
       zip_safe = False,
